--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 <body>
     <!-- Skip to Main Content Link -->
-    <a href="#main-content" class="skip-link" tabindex="1">Skip to main content</a>
+    <a href="#main-content" class="skip-link" tabindex="0">Skip to main content</a>
 
     <!-- HEADER / NAVIGATION -->
     <header class="header" id="header" role="banner">
@@ -549,9 +549,9 @@
 
                     <div class="team-social">
 
-                        <!-- LinkedIn -->
-                        <a href="https://www.linkedin.com/company/codenest-hu/" class="social-link" target="_blank"
-                            rel="noopener">
+                            <!-- LinkedIn -->
+                            <a href="https://www.linkedin.com/company/codenest-hu/" class="social-link" aria-label="CodeNest on LinkedIn" target="_blank"
+                                rel="noopener">
                             <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                                 <path
                                     d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z" />
@@ -560,7 +560,7 @@
                         </a>
 
                         <!-- Instagram -->
-                        <a href="https://www.instagram.com/team_codenest?igsh=a3lkOWhmNGdzd3Fz" class="social-link" target="_blank"
+                        <a href="https://www.instagram.com/team_codenest?igsh=a3lkOWhmNGdzd3Fz" class="social-link" aria-label="CodeNest on Instagram" target="_blank"
                             rel="noopener">
                             <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
                                 <rect x="2" y="2" width="20" height="20" rx="5" stroke="currentColor" stroke-width="2">
@@ -571,7 +571,7 @@
                         </a>
 
                         <!-- Facebook -->
-                        <a href="https://www.facebook.com/share/17UPaEDB6e/" class="social-link" target="_blank"
+                        <a href="https://www.facebook.com/share/17UPaEDB6e/" class="social-link" aria-label="Share CodeNest on Facebook" target="_blank"
                             rel="noopener">
                             <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M13 3c-2.8 0-5 2.2-5 5v3H6v4h2v6h4v-6h3l1-4h-4V8c0-.6.5-1 1-1h3V3h-3Z" />
@@ -598,7 +598,7 @@
                        
                             </div>
                         </div>
-                        <h4 class="team-name">Ábel Sturcz</h4>
+                        <h3 class="team-name">Ábel Sturcz</h3>
                         <p class="team-role" data-en="Backend Builder" data-hu="Backend">Backend Builder</p>
                     </div>
 
@@ -617,7 +617,7 @@
                                 </a>
                             </div>
                         </div>
-                        <h4 class="team-name">Dániel Kiss</h4>
+                        <h3 class="team-name">Dániel Kiss</h3>
                         <p class="team-role" data-en="Frontend Builder" data-hu="Frontend">Frontend Builder</p>
                     </div>
 
@@ -636,7 +636,7 @@
                                 </a>
                             </div>
                         </div>
-                        <h4 class="team-name">Dávid Fekete</h4>
+                        <h3 class="team-name">Dávid Fekete</h3>
                         <p class="team-role" data-en="UI/UX Designer" data-hu="UI/UX Tervező">UI/UX Designer</p>
                     </div>
 
@@ -655,7 +655,7 @@
                                 </a>
                             </div>
                         </div>
-                        <h4 class="team-name">Bors Gugi</h4>
+                        <h3 class="team-name">Bors Gugi</h3>
                         <p class="team-role" data-en="Project Manager" data-hu="Projektvezető">Project Manager</p>
                     </div>
                 </div>
@@ -683,7 +683,7 @@
                                     stroke-linecap="round" stroke-linejoin="round" />
                             </svg>
                         </div>
-                        <h4 class="why-title" data-en="Fast Launch" data-hu="Gyors Munkavézés">Fast Launch</h4>
+                        <h3 class="why-title" data-en="Fast Launch" data-hu="Gyors Munkavézés">Fast Launch</h3>
                         <p class="why-description"
                             data-en="Efficient agile workflow that guarantees project Launch on time."
                             data-hu="Hatékony munkafolyamat, amely garantálja a projekt határidőre történő leadását.">
@@ -699,8 +699,8 @@
                                     stroke-linecap="round" stroke-linejoin="round" />
                             </svg>
                         </div>
-                        <h4 class="why-title" data-en="Measurable Impact" data-hu="Mérhető Eredmények">Measurable Impact
-                        </h4>
+                        <h3 class="why-title" data-en="Measurable Impact" data-hu="Mérhető Eredmények">Measurable Impact
+                        </h3>
                         <p class="why-description"
                             data-en="Every project is built for measurable business results: growth, conversion, revenue."
                             data-hu="Minden projektünk mérhető üzleti eredményekre épül: növekedés, konverzió, bevétel.">
@@ -720,8 +720,8 @@
                                     stroke-linecap="round" stroke-linejoin="round" />
                             </svg>
                         </div>
-                        <h4 class="why-title" data-en="Modern Tech Stack" data-hu="Modern Technológia">Modern Tech Stack
-                        </h4>
+                        <h3 class="why-title" data-en="Modern Tech Stack" data-hu="Modern Technológia">Modern Tech Stack
+                        </h3>
                         <p class="why-description"
                             data-en="Latest and most reliable technologies: React, Next.js, Node.js, TypeScript."
                             data-hu="A legfrissebb és legmegbízhatóbb technológiák: React, Next.js, Node.js, TypeScript.">
@@ -740,8 +740,8 @@
                                     stroke="currentColor" stroke-width="2" />
                             </svg>
                         </div>
-                        <h4 class="why-title" data-en="International Cooperation" data-hu="Többnyelvű Támogatottság">
-                            International Cooperation</h4>
+                        <h3 class="why-title" data-en="International Cooperation" data-hu="Többnyelvű Támogatottság">
+                            International Cooperation</h3>
                         <p class="why-description"
                             data-en="Hungarian and English support, experience in international projects."
                             data-hu="Magyar és angol nyelvű támogatás, tapasztalat nemzetközi projektekben.">
@@ -940,7 +940,7 @@
 
                 <!-- Column 2: Services -->
                 <div class="footer-column">
-                    <h4 class="footer-heading" data-en="Services" data-hu="Szolgáltatások">Services</h4>
+                    <h3 class="footer-heading" data-en="Services" data-hu="Szolgáltatások">Services</h3>
                     <ul class="footer-links">
                         <li><a href="#services" data-en="Website Buildment" data-hu="Weboldal fejlesztés">Website
                                 Buildment</a></li>
@@ -953,7 +953,7 @@
 
                 <!-- Column 3: Company -->
                 <div class="footer-column">
-                    <h4 class="footer-heading" data-en="Company" data-hu="Cég">Company</h4>
+                    <h3 class="footer-heading" data-en="Company" data-hu="Cég">Company</h3>
                     <ul class="footer-links">
                         <li><a href="#team" data-en="About Us" data-hu="Rólunk">About Us</a></li>
                         <li><a href="#portfolio" data-en="Portfolio" data-hu="Referenciák">Portfolio</a></li>
@@ -964,7 +964,7 @@
 
                 <!-- Column 4: Legal -->
                 <div class="footer-column">
-                    <h4 class="footer-heading" data-en="Legal" data-hu="Jogi">Legal</h4>
+                    <h3 class="footer-heading" data-en="Legal" data-hu="Jogi">Legal</h3>
                     <ul class="footer-links">
                         <li><a href="legal-hu.html" data-en="Imprint / Impresszum" data-hu="Impresszum">Imprint / Impresszum</a>
                         </li>
