--- a/legal-hu.html
+++ b/legal-hu.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -7,9 +8,10 @@
 </head>
 
 <body>
- <!-- Vissza gomb -->
+  <!-- Vissza gomb -->
   <p>
-    <a href="index.html" style="display:inline-block; padding:10px 16px; background:#e5e5e5; text-decoration:none; border-radius:6px;">
+    <a href="index.html"
+      style="display:inline-block; padding:10px 16px; background:#e5e5e5; text-decoration:none; border-radius:6px;">
       ← Vissza a főoldalra
     </a>
   </p>
@@ -33,12 +35,13 @@
     <h2>Impresszum</h2>
 
     <p>
-      A <strong>codenest.hu</strong> weboldalt a <strong>CodeNest</strong> márka üzemelteti. 
+      A <strong>codenest.hu</strong> weboldalt a <strong>CodeNest</strong> márka üzemelteti.
       A weboldal bemutató jellegű platform, amely digitális projekteket, kreatív munkát és a csapatot mutatja be.
     </p>
 
     <p>
-      A weboldal használata nem minősül kereskedelmi szolgáltatásnak. A CodeNest márkanév nem bejegyzett vállalkozási forma,
+      A weboldal használata nem minősül kereskedelmi szolgáltatásnak. A CodeNest márkanév nem bejegyzett vállalkozási
+      forma,
       így a magyar jog alapján nem vonatkozik rá kötelező cég- vagy egyéb azonosító adatközlési kötelezettség.
     </p>
 
@@ -54,7 +57,8 @@
     <h2>Adatkezelési Tájékoztató (GDPR)</h2>
 
     <p>
-      A jelen adatkezelési tájékoztató a <strong>codenest.hu</strong> weboldalon keresztül megvalósuló adatkezelésekre vonatkozik.
+      A jelen adatkezelési tájékoztató a <strong>codenest.hu</strong> weboldalon keresztül megvalósuló adatkezelésekre
+      vonatkozik.
       Az adatkezelést a <strong>CodeNest</strong> márka végzi.
     </p>
 
@@ -103,7 +107,8 @@
 
     <h3>6. Adatok továbbítása</h3>
     <p>
-      Az adatok harmadik fél részére nem kerülnek továbbításra, kivéve a tárhelyszolgáltató technikai működéséhez szükséges eseteket.
+      Az adatok harmadik fél részére nem kerülnek továbbításra, kivéve a tárhelyszolgáltató technikai működéséhez
+      szükséges eseteket.
     </p>
 
     <h3>7. Érintetti jogok</h3>
@@ -132,7 +137,8 @@
     </p>
 
     <h3>1. Szükséges sütik</h3>
-    <p>Ezek a weboldal technikai működéséhez elengedhetetlenek. Letiltásuk esetén a weboldal nem működik megfelelően.</p>
+    <p>Ezek a weboldal technikai működéséhez elengedhetetlenek. Letiltásuk esetén a weboldal nem működik megfelelően.
+    </p>
 
     <h3>2. Statisztikai sütik</h3>
     <p>
@@ -141,9 +147,11 @@
 
     <h3>3. Hozzájárulás kezelése</h3>
     <p>
-      A látogató a sütikhez való hozzájárulását az oldal betöltésekor megjelenő süti-ablakban adhatja meg vagy vonhatja vissza.
+      A látogató a sütikhez való hozzájárulását az oldal betöltésekor megjelenő süti-ablakban adhatja meg vagy vonhatja
+      vissza.
     </p>
   </section>
 
 </body>
-</html>
+
+  </html>
